--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>gorila</title>
 </head>
 <body>
-    <center><img src="Screenshot 2025-08-05 134410.png" alt=""></center>
+    <center><img src="iput.mp4" alt=""></center>
 </body>
+
 </html>
